Vienna ChangeLog File
=====================

As you release new builds, update this file with details of the changes in each build. The
most recent build should be at the top of this file.

** Use the notes.html file instead of this file for change notes?

Thanks!

2.3.0.2300
----------
- Added Portuguese localisation. (Thanks to Rui Carlos A. Gonçalves).

2.2.0.2209
----------
- More minor toolbar bug fixes.
- Updated toolbar button bitmaps.

2.2.0.2208
----------
- Fixed bug: ampersand in folder name broke smart folder criteria.
- Fix shrinking toolbar button bug.
- Fix problem where Vienna failed to launch under 10.3.9.

2.2.0.2207
----------
- Add patch to pass selected text to blogging clients. (Contributed by Pukka author Justin R. Miller).
- Fix exception caused by misparsing author field in some Atom feed items.
- Fix "CGContextRestoreGState: invalid context" errors reported to the console log.

2.2.0.2206
----------
- Updated German localisation.
- Fixed overpainting bug in Download window.

2.2.0.2205
----------
- Allow the Search Results folder to be deleted.
- Fix memory leak.
- Minor toolbar button cleanup.

2.2.0.2204
----------
- Fixed bug: on launch, filter popup didn't reflect filter setting.
- Make Refresh toolbar button toggle between refresh and cancel.
- Add Search panel for when the toolbar is turned off or the Search field is removed from the toolbar.
- Fix feed autodiscovery for servers that gzip content.

2.2.0.2203
----------
- Updated all built-in styles to add enclosure field.
- Improved toolbar styles.
- Added Ukrainian localisation. (Thanks to Andrew Kachalo).
- Fixed toolbar UI corruption bug.
- Updated keyboard shortcuts in help file.
- Added Get Info and Style toolbar buttons.

2.2.0.2202
----------
- Fix bug in 2201 which broke saving a new smart folder.
- Fix CGContext errors in the system console log caused by the Vienna tab control gradient background.
- Add Growl events for file download success and failure.